# cs771-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 01_download-images-and-data.ipynb  02.5_review-and-filter-masks.ipynb  02_create-masks.ipynb  03_create_elevation_map.ipynb
